Fix alignment of popup check-in message

--- a/static/style.css
+++ b/static/style.css
@@ -99,6 +99,10 @@ h1 {
     margin:0px 20px 20px 20px;
 }
 
+#librarianCheckInOutput {
+    text-align:center;
+}
+
 #usersContainer {
     width:70%;
     height:15vw;
